--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
-name = "getrandomport"
-version = "0.1.0"
+name = "getport"
+version = "0.2.0"
 edition = "2021"
 publish = false
 
 [dependencies]
+thiserror = "1.0"
+
+[dev-dependencies]
 fastrand = "1.7"
